Started site - created articles and markdown

--- a/approot/views/index.jade
+++ b/approot/views/index.jade
@@ -1,1 +1,7 @@
-hello
+div#wrapper!= partial('partials/header.jade')
+	p Hello! I am testing some crap
+	div#articleList
+		div.article
+			div.title!= article.title
+			div.created!= article.createdDateTime
+			div.body!= article.body
