Added twitter search feature

--- a/approot/views/index.jade
+++ b/approot/views/index.jade
@@ -13,7 +13,4 @@ div#wrapper!= partial('partials/header')
 		
 		a(href="http://coderwall.com/amaurer") Test
 
-		div#twitter
-			ul
-				li.tweet
-					a(href="") tests
+		div#twitterSummary!= partial('partials/twitterSummary')
