--- a/approot/views/articleDetails.jade
+++ b/approot/views/articleDetails.jade
@@ -1,8 +1,6 @@
-div#wrapper!= partial('partials/header.jade')
-	h2 This is Article Details
-	div#articleDetail
-		div.title!= article.title
-		div.author!= article.author
-		div.summary!= article.summary
-		div.createdDateTime!= article.createdDateTime
-		div.article!= article.body
+div#articleDetails.page-header
+
+	h2!= article.title + " "
+		small!= article.createdDateTime
+
+div#articleDetailsBody!= article.body
