--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -1,8 +1,17 @@
 !!! 5
 html
 	head
-		title= 'Andrew Maurer - Sr. Web Developer - ' + title
-		link(rel='stylesheet', href='//twitter.github.com/bootstrap/assets/css/bootstrap-1.1.1.min.css')
-		script(src='//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js')
-		//script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js')
-	body!= body
+		title= "Andrew Maurer - Sr. Web Developer - " + title
+		link(href="//twitter.github.com/bootstrap/1.3.0/bootstrap.min.css", rel="stylesheet", type="text/css")
+		link(href="http://fonts.googleapis.com/css?family=Andika", rel="stylesheet", type="text/css")
+		link(href="/c/style.css", rel="stylesheet", type="text/css")
+		script(src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js")
+		//script(src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js")
+	body
+		div.container
+		
+			include ../partials/header
+
+			!{body}
+
+			a(href="http://coderwall.com/amaurer", title="Coder Wall") CoderWall
