Allow click on header

--- a/approot/views/partials/header.jade
+++ b/approot/views/partials/header.jade
@@ -1,6 +1,7 @@
 div#header
-	h1 Andrew Maurer
-		small Sr. Web Developer
+	h1
+		a(href="/", title="Andrew Maurer - Home") Andrew Maurer
+			small Sr. Web Developer
 
 	form(action="/search/", method="POST")
 		input#search(name="search", type="text")
