--- a/approot/assets/c/style.less
+++ b/approot/assets/c/style.less
@@ -4,6 +4,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight : normal;
 }
 
+h1 a, h1 a:hover {
+	text-decoration : none;
+	color : #404040;
+}
 h1 small {
 	display : block;
 	padding-left : 5px;
