--- a/approot/views/partials/header.jade
+++ b/approot/views/partials/header.jade
@@ -6,3 +6,16 @@ div#header
 	form(action="/search/", method="POST")
 		input#search(name="search", type="text")
 		input#search-button.btn.primary(type="submit", value="Search")
+
+	div#navbar
+		ul
+			li
+				a(href="/", title="Home - Pictures, JavaScript, ColdFusion, Node.js, CSS, Jade, Less") Home
+			li
+				a(href="/articles/", title="Articles on Code by Andrew Maurer - (JavaScript, ColdFusion, Node.js, CSS, Jade, Less)") Articles
+			li
+				a(href="/photos/", title="Photos of my life experiences and those close to me.") Photos
+			li
+				a(href="/profile/", title="All about me and my experiance.") Profile
+			li
+				a(href="/contact/", title="How to contact the Web Developer - Andrew Maurer") Contact
