--- a/approot/views/partials/twitterListSummary.jade
+++ b/approot/views/partials/twitterListSummary.jade
@@ -1,9 +1,16 @@
+
 div#twitterListSummary.page-header
-	h2 Twitter List
+	h2 Twitter Summary List
+
 div#twitterListSummaryResults
-	ul.unstyled
-		- each tweet, t in tweetsList
-			li
-				a(href='http://twitter.com/' + tweet.from_user + '/')
-					img(src=tweet.profile_image_url, alt=tweet.from_user)
-				#{tweet.text}
+
+	- if(tweetsList.length === 0)
+		p
+			small Zero Results
+	- else
+		ul.unstyled
+			- each tweet, t in tweetsList
+				li
+					a(href='http://twitter.com/' + tweet.from_user + '/')
+						img(src=tweet.profile_image_url, alt=tweet.from_user)
+					#{tweet.text}
