--- a/approot/views/photos.jade
+++ b/approot/views/photos.jade
@@ -1,6 +1,9 @@
 div#photosWrapper
-	ul.photos
-		- each photo, pic in flickrData.photos
-			li.photo
-				img(src='http://farm' + photo.farm + '.static.flickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '_z.jpg', alt=photo.title)
+
+	ul.media-grid
+		- each photo, pic in flickrData.photosList
+			li
+				a(href="/photos/" + photo.title.toFolderNameSafe() + "/" + photo.id + "/", title=photo.title)
+					img(src='http://farm' + photo.farm + '.static.flickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '_s.jpg', alt=photo.title)
+
 	script!=JSON.stringify(flickrData.photoCollection)
