Set filtering on main page for summaries

--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -12,6 +12,7 @@ html
 		
 			include ../partials/header
 
-			!{body}
+			div.content
+				!{body}
 
 			a(href="http://coderwall.com/amaurer", title="Coder Wall") CoderWall
