Fixed most displays

--- a/approot/views/profile.jade
+++ b/approot/views/profile.jade
@@ -1,2 +1,61 @@
 
-h2 Profile
+div.page-header
+	h2 Profile
+div#profileResult
+	h3 Andrew Maurer
+	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over six years and I am proficient in ColdFusion, JavaScript, YUI, jQuery, CSS, XHTML, XML, JSON, Flex, ActionScript 3, MSSQL, MySQL and I am learning Python on Google App Engine (GAE). I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two Italian Greyhounds I often refer to as "Monsters".
+
+	div.row
+
+		div.span5
+			h4 Languages
+			ul
+				li ColdFusion
+				li Python
+				li JavaScript
+				li jQuery
+				li YUI
+				li CSS
+				li Less Css
+				li Jade Templates
+				li XHTML
+				li XML
+				li JSON
+				li T-SQL
+				li MSSQL
+				li MySQL
+
+		div.span5
+			h4 Applications
+			ul
+				li ColdFusion Server
+				li Nodejs
+				li Google App Engine (GAE)
+				li Apache
+				li IIS
+				li Eclipse (CFBuilder, Aptana, CFEclipse, Subclipse)
+				li Adobe Dreamweaver
+				li Adobe Flash/Flex Builder
+				li Adobe Fireworks
+				li Tortoise SVN
+				li Git
+				li WebTrends Analytics
+				li SQL Studio
+				li MySQL Administrator Tools
+				li JMeter
+
+		div.span5
+			h4 Certification
+			ul
+				li Advanced ColdFusion 8 Certification
+				li A+ Certification
+				li Network+ Certification
+				li Cypress College - Network Administration
+				li Cypress College - Network Security
+				li Cypress College - Cisco CCNA Certification (Inc.)
+
+			h4 Achievements
+			ul
+				li Awarded Employee of the Quater for Leadership.
+				li Multiple Monthly Recognitions Received.
+			
