--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -1,5 +1,12 @@
+
+- if ( title != null )
+	- title = ' - ' + title;
+- else
+	- var title = '';
+
 !!! 5
 html
+
 	head
 		title= "Andrew Maurer - Sr. Web Developer - " + title
 		link(href="//twitter.github.com/bootstrap/1.3.0/bootstrap.min.css", rel="stylesheet", type="text/css")
@@ -7,12 +14,14 @@ html
 		link(href="/c/style.css", rel="stylesheet", type="text/css")
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js")
 		//script(src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js")
+
 	body
-		div.container
-		
-			include ../partials/header
+
+		include ../partials/header
+
+		div#wrapper.container
 
 			div.content
 				!{body}
 
-			a(href="http://coderwall.com/amaurer", title="Coder Wall") CoderWall
+			include ../partials/footer
