--- a/approot/views/partials/header.jade
+++ b/approot/views/partials/header.jade
@@ -1,21 +1,33 @@
-div#header
-	h1
-		a(href="/", title="Andrew Maurer - Home") Andrew Maurer
-			small Sr. Web Developer
 
-	form(action="/search/", method="POST")
-		input#search(name="search", type="text")
-		input#search-button.btn.primary(type="submit", value="Search")
+- if( page == null )
+	- var page = '';
 
-	div#navbar
-		ul
-			li
-				a(href="/", title="Home - Pictures, JavaScript, ColdFusion, Node.js, CSS, Jade, Less") Home
-			li
-				a(href="/articles/", title="Articles on Code by Andrew Maurer - (JavaScript, ColdFusion, Node.js, CSS, Jade, Less)") Articles
-			li
-				a(href="/photos/", title="Photos of my life experiences and those close to me.") Photos
-			li
-				a(href="/profile/", title="All about me and my experiance.") Profile
-			li
-				a(href="/contact/", title="How to contact the Web Developer - Andrew Maurer") Contact
+div.topbar
+
+	div.topbar-inner
+
+		div.container
+
+			h3
+				a(href="/", title="Home - Pictures, JavaScript, ColdFusion, Node.js, CSS, Jade, Less") Andrew Maurer
+
+			ul.nav
+
+				li(class=( page === 'home' )? 'active' : '')
+					a(href="/", title="Home - Pictures, JavaScript, ColdFusion, Node.js, CSS, Jade, Less") Home
+
+				li(class=( page === 'articles' )? 'active' : '')
+					a(href="/articles/", title="Articles on Code by Andrew Maurer - (JavaScript, ColdFusion, Node.js, CSS, Jade, Less)") Articles
+
+				li(class=( page === 'photos' )? 'active' : '')
+					a(href="/photos/", title="Photos of my life experiences and those close to me.") Photos
+
+				li(class=( page === 'profile' )? 'active' : '')
+					a(href="/profile/", title="All about me and my experience.") Profile
+
+				li(class=( page === 'contact' )? 'active' : '')
+					a(href="/contact/", title="How to contact the Web Developer - Andrew Maurer") Contact          
+			
+			form.pull-left( action="/search/", method="POST")
+				input#search(name="search", type="text")
+				input#search-button.btn.primary(type="submit", value="Search")
