--- a/approot/views/photos.jade
+++ b/approot/views/photos.jade
@@ -6,4 +6,4 @@ div#photosWrapper
 				a(href="/photos/" + photo.title.toFolderNameSafe() + "/" + photo.id + "/", title=photo.title)
 					img(src='http://farm' + photo.farm + '.static.flickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '_s.jpg', alt=photo.title)
 
-	script!=JSON.stringify(flickrData.photoCollection)
+	//script!=JSON.stringify(flickrData.photoCollection)
