--- a/approot/views/contact.jade
+++ b/approot/views/contact.jade
@@ -1,4 +1,21 @@
+
+- email = '<a href="mailto:&#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;" title="Email"> email - &#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;</a>';
+
+style
+	#contact img {
+		width : 300px;
+		padding : 10px 20px 10px 0px;
+	}
+
 div.page-header
 	h2 Contact
+
 div#contact
-	h3 Contact Form goes here
+	p
+		img.flt-left(src="/i/no-contact-forms.gif", title="No need for contact form")
+
+		h3 Whaaa?
+
+		span You dont really need a contact form, do you? Cuh'mon, its 2011; everyone has a Gmail, Hotmail or Yahoo account. Look - here is my email address <a href="mailto:&#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;" title="Email">&#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;</a>. Click or copy and paste into your favorite browser.
+
+div.row
