--- a/approot/views/index.jade
+++ b/approot/views/index.jade
@@ -1,8 +1,12 @@
-p I am Andrew Maurer and I'm pretty cool.
 
+div.hero-unit
+	h2 HI THERE!
+
+
+include partials/tagsList
 
 include partials/articleListSummary
 
-include partials/twitterListSummary
-
 include partials/photoListSummary
+
+include partials/twitterListSummary
