--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -8,7 +8,7 @@
 html
 
 	head
-		title= "Andrew Maurer - Sr. Web Developer - " + title
+		title= "Andrew Maurer - Sr. Web Developer" + title
 		link(href="//twitter.github.com/bootstrap/1.3.0/bootstrap.min.css", rel="stylesheet", type="text/css")
 		link(href="http://fonts.googleapis.com/css?family=Andika", rel="stylesheet", type="text/css")
 		link(href="/c/style.css", rel="stylesheet", type="text/css")
