--- a/approot/views/partials/footer.jade
+++ b/approot/views/partials/footer.jade
@@ -1,4 +1,6 @@
 
+- email = '<a href="mailto:&#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;" title="Email"> email - &#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;</a>';
+
 div#footer
 	div.page-header
 		h2 Links
@@ -8,5 +10,4 @@ div#footer
 				a(href="http://www.coderwall.com/amaurer", title="Andrew Maurer on Coder Wall") CoderWall - amaurer
 			li
 				a(href="http://www.twitter.com/maurerdotme", title="Maurerdotme on Twitter") Twitter - @maurerdotme
-			li
-				a(href="mailto:info@maurer.me", title="Coder Wall") email - &#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;
+			li!=email
