--- a/approot/views/partials/header.jade
+++ b/approot/views/partials/header.jade
@@ -30,4 +30,5 @@ div.topbar
 			
 			form.pull-left( action="/search/", method="POST")
 				input#search(name="search", type="text")
+				&nbsp;
 				input#search-button.btn.primary(type="submit", value="Search")
