--- a/approot/views/profile.jade
+++ b/approot/views/profile.jade
@@ -1,18 +1,20 @@
 
 div.page-header
 	h2 Profile
+	
 div#profileResult
 	h3 Andrew Maurer
-	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over six years and I am proficient in ColdFusion, JavaScript, YUI, jQuery, CSS, XHTML, XML, JSON, Flex, ActionScript 3, MSSQL, MySQL and I am learning Python on Google App Engine (GAE). I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two Italian Greyhounds I often refer to as "Monsters".
+	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over seven years and I am a master of <a href="http://www.javascript.com/" title="JavaScript">JavaScript</a>, <a href="http://www.adobe.com/products/coldfusion-family.html" title="ColdFusion">ColdFusion</a> and <a href="http://www.nodejs.org" title="Node.js">Nodejs</a> while having a passion for learning new things. Things that get me excited are "AH-HA moments", language performance, new tricks in <a href="http://www.ubuntu.com/" title"Ubuntu">Ubuntu</a>, accomplishing tasks throughout the day and <a href="http://us.battle.net/wow/" title"World of Warcraft">World of Warcraft</a>. I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two <a href="http://www.italiangreyhound.org/" title="Italian Greyhound">Italian Greyhounds</a> I often refer to as "Monsters". Resume is available upon request.
 
 	div.row
 
-		div.span5
+		div.span4
 			h4 Languages
 			ul
 				li ColdFusion
-				li Python
 				li JavaScript
+				li Nodejs
+				li Python
 				li jQuery
 				li YUI
 				li CSS
@@ -25,7 +27,7 @@ div#profileResult
 				li MSSQL
 				li MySQL
 
-		div.span5
+		div.span6
 			h4 Applications
 			ul
 				li ColdFusion Server
@@ -44,12 +46,12 @@ div#profileResult
 				li MySQL Administrator Tools
 				li JMeter
 
-		div.span5
+		div.span6
 			h4 Certification
 			ul
-				li Advanced ColdFusion 8 Certification
-				li A+ Certification
-				li Network+ Certification
+				li Advanced ColdFusion 8
+				li Comptia A+ 
+				li Comptia Network+
 				li Cypress College - Network Administration
 				li Cypress College - Network Security
 				li Cypress College - Cisco CCNA Certification (Inc.)
