--- a/approot/assets/c/style.less
+++ b/approot/assets/c/style.less
@@ -1,4 +1,6 @@
 
+
+
 h1, h2, h3, h4, h5, h6 {
 	font-family : "Andika", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight : normal;
@@ -15,4 +17,13 @@ h1 small {
 
 #wrapper {
 	padding-top : 80px;
+}
+
+.flt-right {
+	float : right;
+	clear : left;
+}
+.flt-left {
+	float : left;
+	clear : right;
 }
