--- a/approot/views/partials/photoListSummary.jade
+++ b/approot/views/partials/photoListSummary.jade
@@ -8,5 +8,5 @@ div#photosListSummaryResults
 		ul.media-grid
 			- each photo, pic in photosList
 				li
-					a(href="/photos/" + photo.title + "/" + photo.id + "/")
+					a(href="/photos/" + photo.title.toFolderNameSafe() + "/" + photo.id + "/")
 						img.thumbnail(src='http://farm' + photo.farm + '.static.flickr.com/' + photo.server + '/' + photo.id + '_' + photo.secret + '_s.jpg', alt=photo.title)
