--- a/approot/views/partials/tagsList.jade
+++ b/approot/views/partials/tagsList.jade
@@ -3,7 +3,7 @@ div#tagsList
 	ul.unstyled
 		-each tag, t in tagsList
 			li
-				a(style="font-size : #{tag.count.toString().toTagPopularitySize()};")
+				a(href="/search/#{tag._content}", style="font-size : #{tag.count.toString().toTagPopularitySize()};")
 					#{tag._content.substr(0, 1).toUpperCase() + tag._content.substr(1)}
 
 			
