--- a/approot/views/articleDetails.jade
+++ b/approot/views/articleDetails.jade
@@ -2,6 +2,6 @@ div#articleDetails.page-header
 
 	h2!= article.title + " "
 		small
-			#{new Date(article.createdDateTime * 1000)}
+			#{new Date((article.createdDateTime * 1000) - 60000)}
 
 div#articleDetailsBody!= article.body
