--- a/approot/views/search.jade
+++ b/approot/views/search.jade
@@ -1,6 +1,6 @@
-div#search.page-header
-	p Search Results
-	
+
+include partials/searchForm
+
 div#searchResults
 
 	include partials/articleListSummary
