--- a/approot/views/profile.jade
+++ b/approot/views/profile.jade
@@ -1,10 +1,12 @@
 
+include partials/searchForm
+
 div.page-header
 	h2 Profile
 	
 div#profileResult
-	h3 Andrew Maurer
-	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over seven years and I am a master of <a href="http://www.javascript.com/" title="JavaScript">JavaScript</a>, <a href="http://www.adobe.com/products/coldfusion-family.html" title="ColdFusion">ColdFusion</a> and <a href="http://www.nodejs.org" title="Node.js">Nodejs</a> while having a passion for learning new things. Things that get me excited are "AH-HA moments", language performance, new tricks in <a href="http://www.ubuntu.com/" title"Ubuntu">Ubuntu</a>, accomplishing tasks throughout the day and <a href="http://us.battle.net/wow/" title"World of Warcraft">World of Warcraft</a>. I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two <a href="http://www.italiangreyhound.org/" title="Italian Greyhound">Italian Greyhounds</a> I often refer to as "Monsters". Resume is available upon request.
+	img.pull-left(src="http://www.gravatar.com/avatar/1c90996bba151fab1394cf416dbeda98.png")
+	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over seven years and I am a master of <a href="http://www.javascript.com/" title="JavaScript">JavaScript</a>, <a href="http://www.adobe.com/products/coldfusion-family.html" title="ColdFusion">ColdFusion</a> and <a href="http://www.nodejs.org" title="Node.js">Nodejs</a> while having a passion for learning new things. Things that get me excited are "AH-HA" moments, language performance, new tricks in <a href="http://www.ubuntu.com/" title"Ubuntu">Ubuntu</a>, accomplishing tasks throughout the day and <a href="http://us.battle.net/wow/" title"World of Warcraft">World of Warcraft</a>. I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two <a href="http://www.italiangreyhound.org/" title="Italian Greyhound">Italian Greyhounds</a> I often refer to as "Monsters". Resume is available upon request.
 
 	div.row
 
