--- a/approot/views/articles.jade
+++ b/approot/views/articles.jade
@@ -2,7 +2,7 @@
 include partials/searchForm
 
 div#article.page-header
-	h2 Article
+	h2 Articles
 	
 div#articleResults
 	- if(articlesList.length === 0)
