--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -1,4 +1,6 @@
 
+- email = '<a href="mailto:&#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;" title="Email"> Email - &#97;&#110;&#100;&#114;&#101;&#119;&#64;&#109;&#97;&#117;&#114;&#101;&#114;&#46;&#109;&#101;</a>';
+
 - if ( title != null )
 	- title = ' - ' + title;
 - else
@@ -10,11 +12,10 @@ html
 	head
 		title= "Andrew Maurer - Sr. Web Developer" + title
 		link(href="//twitter.github.com/bootstrap/1.3.0/bootstrap.min.css", rel="stylesheet", type="text/css")
-		link(href="http://fonts.googleapis.com/css?family=Coda", rel="stylesheet", type="text/css")
-		link(href="http://fonts.googleapis.com/css?family=Marck+Script", rel="stylesheet", type="text/css")
+		link(href="//fonts.googleapis.com/css?family=Coda", rel="stylesheet", type="text/css")
+		link(href="//fonts.googleapis.com/css?family=Marck+Script", rel="stylesheet", type="text/css")
 		link(href="/c/style.css", rel="stylesheet", type="text/css")
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js")
-		//script(src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js")
 
 	body
 
@@ -22,7 +23,7 @@ html
 
 			include ../partials/header
 				
-
+				
 		content
 		
 			div#wrapper.container
@@ -30,4 +31,17 @@ html
 				div.content
 					!{body}
 
-				include ../partials/footer
+
+		footer.topbar-inner
+
+			div#footer.container
+
+				div#Links
+					ul.unstyled
+						li!=email
+						li
+							a(href="http://www.coderwall.com/amaurer", title="Andrew Maurer on Coder Wall") CoderWall - amaurer
+						li
+							a(href="http://www.twitter.com/maurerdotme", title="Maurerdotme on Twitter") Twitter - @maurerdotme
+						li
+							a(href="http://github.com/amaurer", title="Andrew Maurer on Github") Github - amaurer
