--- a/approot/views/index.jade
+++ b/approot/views/index.jade
@@ -1,13 +1,21 @@
 
-div.hero-unit
-	h2 HI THERE!
+section
+	include partials/searchForm
 
-include partials/searchForm
+section
+	include partials/tagsList
 
-include partials/tagsList
+section
+	div#articleListSummary.page-header
+		h2 Articles
+	include partials/articleListSummary
 
-include partials/articleListSummary
+section
+	div#photosListSummary.page-header
+		h2 Photos
+	include partials/photoListSummary
 
-include partials/photoListSummary
-
-include partials/twitterListSummary
+section
+	div#twitterListSummary.page-header
+		h2 Tweets
+	include partials/twitterListSummary
