Made new article and fixed sorting articles

--- a/approot/assets/c/style.less
+++ b/approot/assets/c/style.less
@@ -54,6 +54,12 @@ html, body {
 	margin : 0px 10px 0px 0px;
 }
 
+/* Article Details */
+#articleDetailsBody img {
+	border : 1px solid #000;
+	padding : 3px;
+}
+
 /* Tags */
 #tagsList li {
 	display : inline;
