--- a/approot/views/profile.jade
+++ b/approot/views/profile.jade
@@ -6,7 +6,7 @@ div.page-header
 	
 div#profileResult
 	img.pull-left(src="http://www.gravatar.com/avatar/1c90996bba151fab1394cf416dbeda98.png")
-	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over seven years and I am a master of <a href="http://www.javascript.com/" title="JavaScript">JavaScript</a>, <a href="http://www.adobe.com/products/coldfusion-family.html" title="ColdFusion">ColdFusion</a> and <a href="http://www.nodejs.org" title="Node.js">Nodejs</a> while having a passion for learning new things. Things that get me excited are "AH-HA" moments, language performance, new tricks in <a href="http://www.ubuntu.com/" title"Ubuntu">Ubuntu</a>, accomplishing tasks throughout the day, weight lifting and <a href="http://us.battle.net/wow/" title"World of Warcraft">World of Warcraft</a>. I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two <a href="http://www.italiangreyhound.org/" title="Italian Greyhound">Italian Greyhounds</a> I often refer to as "Monsters". Resume is available upon request.
+	p I am a Sr. Web Developer at DealerTire and a hobbyist photographer in my free time. I have been developing over seven years and I am a master of <a href="http://www.javascript.com/" title="JavaScript">JavaScript</a>, <a href="http://www.adobe.com/products/coldfusion-family.html" title="ColdFusion">ColdFusion</a> and <a href="http://www.nodejs.org" title="Node.js">Nodejs</a> while having a passion for learning new things. Things that get me excited are "AH-HA" moments, language performance, new tricks in <a href="http://www.ubuntu.com/" title"Ubuntu">Ubuntu</a>, accomplishing tasks throughout the day, weight lifting and <a href="http://us.battle.net/wow/" title"World of Warcraft">World of Warcraft</a>. I am also the Co-Manager of two User Groups, <a href="http://www.meetup.com/Cleveland-Adobe-User-Group/" title="Cleveland Adobe User Group">Cleveland Adobe User Group</a> and <a href="http://www.meetup.com/NodejsCleveland/" title="Cleveland Node.js User Group">Cleveland Node.js User Group</a>.I currently live in Seven Hills, Ohio (a suburb of Cleveland) with my wife and two <a href="http://www.italiangreyhound.org/" title="Italian Greyhound">Italian Greyhounds</a> I often refer to as "Monsters". Resume is available upon request.
 
 	div.row
 
@@ -62,4 +62,6 @@ div#profileResult
 			ul
 				li Awarded Employee of the Quater for Leadership.
 				li Multiple Monthly Recognitions Received.
+				li Co-Manager of the <a href="http://www.meetup.com/Cleveland-Adobe-User-Group/" title="Cleveland Adobe User Group">Cleveland Adobe User Group</a>
+				li Co-Manager of the <a href="http://www.meetup.com/NodejsCleveland/" title="Cleveland Node.js User Group">Cleveland Node.js User Group</a>
 			
