--- a/approot/assets/c/style.css
+++ b/approot/assets/c/style.css
@@ -9,6 +9,7 @@ html,body{height:100%;}
 .page-header{margin:13px 0px 11px;}
 .page-header h2{font-size:2.5em;text-shadow:1px 1px 1px rgba(128, 128, 128, 0.5);}
 #profileResult img{border:1px solid #000;padding:3px;margin:0px 10px 0px 0px;}
+#articleDetailsBody img{border:1px solid #000;padding:3px;}
 #tagsList li{display:inline;font-size:10px;}
 #tagsList li a{margin-right:3px;}
 #Links li{display:inline;margin-right:30px;}
