--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -45,3 +45,7 @@ html
 							a(href="http://www.twitter.com/maurerdotme", title="Maurerdotme on Twitter") Twitter - @maurerdotme
 						li
 							a(href="http://github.com/amaurer", title="Andrew Maurer on Github") Github - amaurer
+						li
+							a(href="http://www.meetup.com/NodejsCleveland/", title="Cleveland Node.js User Group") Cleveland Node.js
+						li
+							a(href="http://www.meetup.com/Cleveland-Adobe-User-Group/", title="Cleveland Adobe User Group") Cleveland Adobe
