--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -16,6 +16,17 @@ html
 		link(href="//fonts.googleapis.com/css?family=Marck+Script", rel="stylesheet", type="text/css")
 		link(href="/c/style.css", rel="stylesheet", type="text/css")
 		script(src="//ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js")
+		script
+
+			var _gaq = _gaq || [];
+				_gaq.push(['_setAccount', 'UA-20670750-1']);
+				_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+					ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
 
 	body
 
