--- a/approot/views/layouts/single_col_full.jade
+++ b/approot/views/layouts/single_col_full.jade
@@ -10,7 +10,7 @@
 html
 
 	head
-		title= "Andrew Maurer - Sr. Web Developer" + title
+		title= "Andrew Maurer - Sr. Web Developer - Cleveland Ohio" + title
 		link(href="//twitter.github.com/bootstrap/1.3.0/bootstrap.min.css", rel="stylesheet", type="text/css")
 		link(href="//fonts.googleapis.com/css?family=Coda", rel="stylesheet", type="text/css")
 		link(href="//fonts.googleapis.com/css?family=Marck+Script", rel="stylesheet", type="text/css")
