--- a/approot/assets/c/style.less
+++ b/approot/assets/c/style.less
@@ -21,7 +21,7 @@ html, body {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	padding-top : 120px;
+	margin-top : 120px;
 }
 
 /* Header */
