--- a/approot/assets/c/style.css
+++ b/approot/assets/c/style.css
@@ -1,14 +1,15 @@
-h1,h2,h3,h4,h5,h6{font-family:Coda,cursive,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:normal;}
+h1,h2,h3,h4,h5,h6{font-family:"Coda",cursive,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight:normal;}
 h1 a,h1 a:hover{text-decoration:none;color:#404040;}
 h1 small{display:block;padding-left:5px;}
 html,body{height:100%;}
 #wrapper{min-height:100%;height:auto !important;height:100%;margin-top:120px;}
-.brand h3 a{font-family:'Marck Script',cursive;text-shadow:0 2px 0 #000000;font-size:4em;padding-bottom:0px;}
+.brand h3 a{font-family:"Marck Script",cursive;text-shadow:0 2px 0 #000000;font-size:4em;padding-bottom:0px;}
 .topbar .nav{margin:0px 0px 0px 7px;}
 .topbar .nav a{padding:41px 16px;line-height:17px;font-size:17px;}
 .page-header{margin:13px 0px 11px;}
 .page-header h2{font-size:2.5em;text-shadow:1px 1px 1px rgba(128, 128, 128, 0.5);}
 #profileResult img{border:1px solid #000;padding:3px;margin:0px 10px 0px 0px;}
+#articleResults p,#articleResults h3{padding-left:13px;}
 #articleDetailsBody img{border:1px solid #000;padding:3px;}
 #tagsList li{display:inline;font-size:10px;}
 #tagsList li a{margin-right:3px;}
