--- a/approot/assets/c/style.less
+++ b/approot/assets/c/style.less
@@ -1,7 +1,7 @@
 
 /* HTML Tags */
 h1, h2, h3, h4, h5, h6 {
-	font-family : Coda, cursive, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family : "Coda", cursive, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-weight : normal;
 }
 h1 a, h1 a:hover {
@@ -26,7 +26,7 @@ html, body {
 
 /* Header */
 .brand h3 a {
-	font-family : 'Marck Script', cursive;
+	font-family : "Marck Script", cursive;
 	text-shadow : 0 2px 0 rgba(0, 0, 0, 1);
 	font-size : 4em;
 	padding-bottom : 0px;
@@ -47,6 +47,7 @@ html, body {
 	text-shadow : 1px 1px 1px rgba(128, 128, 128, .5);
 }
 
+
 /* Profile */
 #profileResult img {
 	border : 1px solid #000;
@@ -54,11 +55,16 @@ html, body {
 	margin : 0px 10px 0px 0px;
 }
 
-/* Article Details */
+
+/* Articles */
+#articleResults p, #articleResults h3 {
+	padding-left : 13px;
+}
 #articleDetailsBody img {
 	border : 1px solid #000;
 	padding : 3px;
 }
+
 
 /* Tags */
 #tagsList li {
@@ -69,6 +75,7 @@ html, body {
 	margin-right : 3px;
 }
 
+
 /* Footer */
 #Links li {
 	display : inline;
@@ -77,6 +84,7 @@ html, body {
 #Links li a {
 	color : #fff;
 }
+
 
 /* Helpers */
 .flt-right {
